[gd_scene load_steps=6 format=1]

[ext_resource path="res://Scripts/PetMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/nine-slice.png" type="Texture" id=2]
[ext_resource path="res://Sprites/tileset.png" type="Texture" id=3]
[ext_resource path="res://Fonts/SomepxNew.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]

font/size = 64
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[node name="Pet Menu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="CostBox" type="Patch9Frame" parent="."]

rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -64.0
margin/right = 32.0
margin/bottom = -47.0
texture = ExtResource( 2 )
patch_margin/left = 8
patch_margin/top = 8
patch_margin/right = 8
patch_margin/bottom = 8

[node name="IntensityIcon" type="Sprite" parent="."]

transform/pos = Vector2( 32, -31 )
transform/scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
region = true
region_rect = Rect2( 112, 160, 16, 16 )

[node name="CostLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 136.0
margin/top = -63.0
margin/right = 172.0
margin/bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0313726, 0.0784314, 0.117647, 1 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="IntensityLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 54.0
margin/top = -63.0
margin/right = 112.0
margin/bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0313726, 0.0784314, 0.117647, 1 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MenuBox" type="Patch9Frame" parent="."]

rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 120.0
margin/bottom = 20.0
texture = ExtResource( 2 )
patch_margin/left = 8
patch_margin/top = 8
patch_margin/right = 8
patch_margin/bottom = 8

[node name="SnackLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 8.0
margin/right = 140.0
margin/bottom = 55.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0313726, 0.0784314, 0.117647, 1 )
text = "Snack"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MealLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 163.0
margin/top = 8.0
margin/right = 243.0
margin/bottom = 56.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0313726, 0.0784314, 0.117647, 1 )
text = "Meal"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BathLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 265.0
margin/top = 8.0
margin/right = 341.0
margin/bottom = 55.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0313726, 0.0784314, 0.117647, 1 )
text = "Bath"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PlayLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 368.0
margin/top = 8.0
margin/right = 444.0
margin/bottom = 55.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0313726, 0.0784314, 0.117647, 1 )
text = "Play"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SelectLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 15.0
margin/right = 160.0
margin/bottom = 63.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0313726, 0.0784314, 0.117647, 1 )
text = "_____"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


